@@ -5,6 +5,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.6.1 - not yet released
 * devices
   - indicate duplicate devices in list
+  - allow using more than one TCP/UDP device
 
 Version 6.6 - 2013/04/23
 * map
